--- a/Sesion6/2-ollama-langchain.ipynb
+++ b/Sesion6/2-ollama-langchain.ipynb
@@ -2508,18 +2508,40 @@
       },
       "source": [
         "## Conclusiones\n",
-        "- Observamos la dificultad en la instalacion de las librerias y la compatiblidad entre ellas.\n",
-        "- Mas alla del lio con las librerias, la implementacion del codigo es relativamente sencillo y se ejecuta de manera exitosa.\n",
-        "- Se logra validar que el chatbot aplica bien el concepto de los rags, no da respuestas fuera del contexto y no divaga.\n",
-        "- Si bien se pueden hacer los cambios, se debe tener cuidado que los datasets deberian contar con una estructura y formato similar al dataset original, cualquier cambio puede complicar la implementacion.\n",
+        "- Se identificaron dificultades relacionadas con la instalación de las librerías y la compatibilidad entre sus versiones.\n",
+        "- Más allá de estos inconvenientes, la implementación del código resultó relativamente sencilla y se ejecutó de manera exitosa.\n",
+        "- Se comprobó que el chatbot aplica correctamente el enfoque basado en RAGs, ya que mantiene las respuestas dentro del contexto y evita divagaciones.\n",
+        "- Aunque es posible realizar modificaciones, es importante tener en cuenta que los datasets deben mantener una estructura y formato similares al dataset original; de lo contrario, la implementación puede volverse más compleja.\n",
         "\n",
+        "### Aspectos Técnicos\n",
+        "- La implementación de RAG utilizando LangChain y FAISS demostró ser efectiva aunque presenta desafíos iniciales de configuración\n",
+        "- El manejo de dependencias y compatibilidad entre librerías requiere atención especial, especialmente con las versiones de NumPy y FAISS\n",
+        "- La arquitectura RAG demostró buena precisión en las respuestas, manteniéndose dentro del contexto proporcionado\n",
+        "- El sistema de recuperación de documentos con FAISS mostró ser eficiente para búsquedas semánticas\n",
         "\n",
+        "### Ventajas del Framework\n",
+        "- LangChain simplifica significativamente la implementación de chatbots y sistemas RAG\n",
+        "- La integración con múltiples LLMs (Ollama, OpenAI, etc.) ofrece flexibilidad en la elección del modelo\n",
+        "- El manejo de historiales de conversación y contexto es más intuitivo con las herramientas proporcionadas\n",
+        "- La interfaz con Gradio permite crear rápidamente prototipos funcionales\n",
         "\n",
-        "- Observamos que la herramienta LangChain nos puede ayudar a simplificar considerablemente el proceso de crear ChatBots.\n",
-        "- No es necesario implementar manualmente el Document Retriever y la librería FAISS nos ayuda a crear vector stores más robustos y precisos.\n",
-        "- Sin embargo debemos ser cuidadosos con las estructuras que esta maneja ya que al ser un framework opinionado, podemos cometer fácilmente errores al invocar sus funciones.\n",
+        "### Consideraciones para Implementación\n",
+        "- Es crucial mantener una estructura de datos consistente al trabajar con diferentes datasets\n",
+        "- El manejo de históricos requiere considerar tanto el formato LangChain como el de la interfaz\n",
+        "- La selección del modelo de embeddings impacta directamente en la calidad de las búsquedas\n",
+        "- Es importante balancear el tamaño del contexto y la cantidad de documentos recuperados\n",
         "\n",
-        "Felicidades! has llegado al final del curso! espero que toda esta información te haya sido de utilidad.\n"
+        "### Oportunidades de Mejora\n",
+        "- Se podría implementar un sistema de logging para monitorear la calidad de las respuestas\n",
+        "- La implementación de técnicas de chunking podría mejorar la precisión en documentos largos\n",
+        "- Se podría explorar la integración con otros vectorstores además de FAISS\n",
+        "- La implementación de evaluación automática de respuestas mejoraría la calidad del sistema\n",
+        "\n",
+        "### Lecciones Aprendidas\n",
+        "- El uso de frameworks especializados como LangChain acelera el desarrollo de sistemas RAG\n",
+        "- La importancia de una buena preparación y limpieza de datos antes de la vectorización\n",
+        "- La necesidad de balance entre precisión y velocidad en la recuperación de documentos\n",
+        "- La ventaja de utilizar modelos multilingües para mayor flexibilidad en las aplicaciones"
       ]
     },
     {
